Backend/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carmodpicker-backend
  labels:
    app: carmodpicker-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: carmodpicker-backend
  template:
    metadata:
      labels:
        app: carmodpicker-backend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: fastapi-backend
          image: webbpulse/carmodpicker:backend-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
