Backend/kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc

spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgresdb
  selector:
    app: postgres
