Backend/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carmodpicker-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: carmodpicker-backend-svc
            port:
              number: 8000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: carmodpicker-frontend-svc
            port:
              number: 80
